# sudoku

./: .gitignore  1.cpp  CMakeLists.txt  Make.win  Makefile  Makefile.win  README.md  coincidence.c  colors.c  cursor.c  decision.c  flags.c  forecasting.c  frame.c  init.c  input_psbl_lc.c  input_psbl_sc.c  input_type.c  io.c  io_system.c  main.c  mesage.c  message.c  mygetch.c  num_of_cros.c  print_mas.c  psbl_sc.c  rand_array.c  rand_array_special.c  revers.c  sort_array.c  substitution.c  sud_maker.c  sudlib.h  sudoku  sudoku.c  tags  vozvrat.c  zeros.c
sources/libio/: colors.c  cursor.c  frame.c  input_psbl_sc.c  input_type.c  io_system.c  message.c
sources/libsud/: coincidence.c  cursor.c  decision.c  flags.c  forecasting.c  init.c  input_type.c  num_of_cros.c  psbl_sc.c  rand_array_special.c  revers.c  substitution.c  sud_maker.c
